[metadata]
name = htql
version = 1.0.0
author = Liangyou Chen
author_email = author@example.com
description = This is an htql package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/liangyouchen/htql/
project_urls =
    Bug Tracker = https://github.com/liangyouchen/htql/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=2.6

[options.packages.find]
where = .

